# flume

./: .clinerules  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  bootstrap.py  bootstrap.sh  build-package.sh  config.toml  docker-compose.yml  extract.py  fix_es.py  fix_es_2.py  fix_es_3.py  fix_manager.py  fix_server.py  flume  flume-python-logloom-graph.json  flume.config.json  go.mod  go.sum  live_zombie_exploit.py  live_zombie_exploit_v2.py  llm_client.py  llm_client_async_update.py  logloom-e2e-tests.sh  logloom-local-llm-test.sh  logloom-utility-benchmark.sh  mock_agent_runner.py  nexus-setup.py  patch.go  patch_elastic.go  patch_sources.py  pyproject.toml  release.yaml  setup.sh  setup_exo.py  test_check.py  (+13 more)
.agents/workflows/: test_mission_control.md  test_security.md  test_settings_projects.md
.github/workflows/: cli-build.yml  docker-ci.yml  enterprise-ci.yml  meta_critic.yml  release.yaml  releaseflow.yml
cmd/flume/: main.go
config/: openbao.hcl
dev/: bootstrap.py
docs/operations/: lifecycle.md  observability-telemetry.md  troubleshooting.md
docs/reference/: architecture.md  cli.md  providers.md  settings-management.md
docs/walkthroughs/: api-onboarding.md  elastro-code-graph.md  gui-onboarding.md  inception-skills.md  local-inference.md  meta-critic-pipeline.md
flume.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flume_cli/: __init__.py  cli.py  interactive_install.py
install/: .env.template  README.md  elastic-admin.env.example  flume.config.example.json  install.sh
install/setup/: bootstrap-es-credentials.sh  codex_oauth_login.py  create-es-indices.sh  es_bootstrap_api_key.py  flume-dashboard.service.template  hydrate-openbao-env.py  install-codex-cli.sh  install-elasticsearch.sh  install-flume-service.sh  install-gh.sh  install-nodejs-lts.sh  install-openbao.sh  openai-oauth.sh  persist-host-es-url.py  run-native.sh  sync-bootstrap-to-openbao.sh  uninstall-elasticsearch-openbao.sh  verify-deps.sh
manifests/: release-manifest.yaml
skills/: hello-world.skill.md
src/: ado_tokens_store.py  codex_app_server_bridge.py  docker_bootstrap.py  es_credential_store.py  flume_secrets.py  github_tokens_store.py  llm_credentials_store.py  openai_oauth_state.py  projects.json  workspace_llm_env.py
src/agents/: README.md
src/dashboard/: agent_models_settings.py  auto_unblock.py  autonomy_sweeps.py  codex_app_server.py  codex_app_server_client.py  codex_ws_proxy.py  config.py  es_bootstrap.py  index.html  llm_client.py  llm_settings.py  repo_settings.py  requirements-codex-proxy.txt  run.sh  seed_telemetry.py  server.py
src/flume.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gateway/: Dockerfile  adaptive_ensemble.go  anthropic_test.go  concurrency.go  config.go  ensemble.go  ensemble_test.go  errors.go  frontier_prober.go  gateway_test.go  guardrails.go  health_checker.go  logger.go  metrics.go  metrics_test.go  models.go  multi_node_router.go  node_api_test.go  node_registry.go  normalize_test.go  pressure.go  providers.go  routing_policy.go  routing_policy_test.go  secrets.go  security_test.go  server.go  think_milling.go  think_milling_test.go  tool_call_id_test.go  (+1 more)
tests/: conftest.py  smoke_clone.py  test_llm_client.py  test_manager.py
(+340 files in other folders)
