[project]
name = "flume"
version = "0.1.0"
description = "Autonomous Engineering Frontier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "elasticsearch",
    "requests",
    "pydantic",
    "pydantic-settings",
    "click",
    "toml>=0.10.2",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff"
]

[project.scripts]
flume = "flume_cli.cli:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flume_cli*", "src*"]

[tool.pytest.ini_options]
pythonpath = ["src", "src/dashboard"]
