[project]
name = "flume"
version = "0.1.72"
description = "Autonomous Engineering Frontier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "elasticsearch",
    "requests",
    "pydantic",
    "pydantic-settings",
    "click",
    "toml>=0.10.2",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "hvac>=2.1.0",
    "opensearch-py>=2.3.0",
    "tenacity>=8.3.0",
    "ruff",
    "elastro-client>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["*node_modules*"]

[tool.pytest.ini_options]
pythonpath = ["src", "src/dashboard"]
