[project]
name = "flume"
version = "0.1.109"
description = "Autonomous Engineering Frontier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch",
    "requests",
    "pydantic",
    "pydantic-settings",
    "click",
    "toml>=0.10.2",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "hvac>=2.1.0",
    "opensearch-py>=2.3.0",
    "tenacity>=8.3.0",
    "ruff",
    "elastro-client>=1.3.52",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-html",
    "mypy"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["*node_modules*"]

[tool.pytest.ini_options]
pythonpath = ["src", "src/dashboard"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--html=tests/report.html --self-contained-html"
markers = [
    "unit: fast, mocked unit tests validating core logic",
    "integration: isolated Elasticsearch/DB abstraction tests",
    "e2e: fully simulated behavior-driven user tests crossing full boundaries",
    "perf: long-running concurrency and stress testing",
    "security: KMS configuration and kill-switch global tests",
    "provider: explicit cross-LLM validation matrices",
]

[tool.pyright]
extraPaths = ["src/dashboard"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
explicit_package_bases = true
